--- a/XTS/localjunit/crash-recovery-tests/pom.xml
+++ b/XTS/localjunit/crash-recovery-tests/pom.xml
@@ -57,7 +57,7 @@
 			<groupId>org.jboss.arquillian.junit</groupId>
 			<artifactId>arquillian-junit-container</artifactId>
 			<version>1.0.0.Final-SNAPSHOT</version>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<profiles>
@@ -85,9 +85,15 @@
 				 <dependency>
 					 <groupId>org.jboss.as</groupId>
 					 <artifactId>jboss-as-arquillian-container-managed</artifactId>
-					 <version>7.0.2.Final</version>
+					 <version>7.1.0.CR1-SNAPSHOT</version>
 					 <scope>test</scope>
 				 </dependency>
+				  <dependency>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-controller-client</artifactId>
+                    <version>7.1.0.CR1-SNAPSHOT</version>
+                    <scope>test</scope>
+                </dependency>
 			 </dependencies>
 	 </profile>
  </profiles>
