--- a/XTS/localjunit/crash-recovery-tests/pom.xml
+++ b/XTS/localjunit/crash-recovery-tests/pom.xml
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>org.jboss.arquillian.junit</groupId>
 			<artifactId>arquillian-junit-container</artifactId>
-			<version>1.0.0.Final-SNAPSHOT</version>
+			<version>1.0.0.CR6</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
