--- a/.classpath
+++ b/.classpath
@@ -46,7 +46,7 @@
 	<classpathentry kind="src" path="XTS/WSCF/classes"/>
 	<classpathentry kind="src" path="XTS/WSAS/classes"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="var" path="M2_REPO/org/jboss/jboss-transaction-spi/7.0.0-SNAPSHOT/jboss-transaction-spi-7.0.0-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jboss/jboss-transaction-spi/7.0.0-SNAPSHOT/jboss-transaction-spi-7.0.0-SNAPSHOT.jar" sourcepath="/M2_REPO/org/jboss/jboss-transaction-spi/7.0.0-SNAPSHOT/jboss-transaction-spi-7.0.0-SNAPSHOT-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/jboss/spec/javax/transaction/jboss-transaction-api_1.1_spec/1.0.0.Final/jboss-transaction-api_1.1_spec-1.0.0.Final.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/jboss/spec/javax/resource/jboss-connector-api_1.6_spec/1.0.0.Final/jboss-connector-api_1.6_spec-1.0.0.Final.jar"/>
 	<classpathentry kind="var" path="M2_REPO/junit/junit/4.8.2/junit-4.8.2.jar"/>
