--- a/txframework/framework/pom.xml
+++ b/txframework/framework/pom.xml
@@ -19,6 +19,19 @@
         <jboss.version>7.1.0.Beta1</jboss.version>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    
     <dependencyManagement>
         <dependencies>
             <!-- Define the version of JBoss' Java EE 6 APIs we want to import. Any
@@ -98,10 +111,6 @@
 
     <profiles>
         <profile>
-            <!-- The default profile skips all tests, though you can tune it
-               to run just unit tests based on a custom pattern -->
-            <!-- Seperate profiles are provided for running all tests, including
-               Arquillian tests that execute in the specified container -->
             <id>default</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
