Add generate_helper support to jacorb in build. JBTM-1004
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@37791 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/ArjunaJTS/jtax/build.xml
+++ b/ArjunaJTS/jtax/build.xml
@@ -47,7 +47,7 @@
         <idl-compiler orb="JacORB"
                       buildlist="${idl.buildlist}"
                       destdir="${basedir}/${build.dir}/tests/generatedclasses"
-                      parameters="include='idl/omg/;idl/arjuna;${jacorb.home}/idl/omg',classpath='${jacorb.classpath}'"/>
+                      parameters="include='idl/omg/;idl/arjuna;${jacorb.home}/idl/omg',classpath='${jacorb.classpath}',generate_helper='portable'"/>
     </target>
 
     <target name="run.tests">
