--- a/ArjunaJTS/orbportability/build.xml
+++ b/ArjunaJTS/orbportability/build.xml
@@ -46,6 +46,9 @@
 
     <target name="compile-tests" depends="compile-tests-idl">
         <compile-tests.macro>
+            <additional.classpath>
+                <path refid="jacorb.classpath"/>
+            </additional.classpath>
             <additional.src.dirs>
                 <src location="${build.dir}/tests/generatedclasses"/>
             </additional.src.dirs>
@@ -61,9 +64,9 @@
         </idl-build-list>
 
         <idl-compiler orb="JacORB"
-                        buildlist="${idl.buildlist}"
-                        destdir="${basedir}/${build.dir}/tests/generatedclasses"
-                        parameters="include='${jacorb.home}/idl/omg/',classpath='${jacorb.classpath}'"/>
+                      buildlist="${idl.buildlist}"
+                      destdir="${basedir}/${build.dir}/tests/generatedclasses"
+                      parameters="include='${jacorb.home}/idl/omg/',classpath='${jacorb.classpath}',generate_helper='portable'"/>
 
     </target>
 
@@ -92,7 +95,7 @@
         </run.tests.macro>
 
         <emma.report.macro/>
-        
+
     </target>
 
 </project>
