JBTM-895 print the output of the atsintegration tests
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@37809 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/atsintegration/build.xml
+++ b/atsintegration/build.xml
@@ -78,7 +78,7 @@
     </target>
 
     <target name="run.tests">
-        <run.tests.macro>
+        <run.tests.macro showoutput="true">
             <tests>
                 <fileset dir="tests/classes">
                     <include name="**/SimpleIsolatedServers.java"/>
