--- a/ArjunaJTA/jta/build.xml
+++ b/ArjunaJTA/jta/build.xml
@@ -34,6 +34,23 @@
 
     </target>
 
+	<!--
+		run tests that match a given pattern, for example
+		ant testone -DONECLASS="**/*ObjectStoreAPIJMXTest.java"
+		To run under the debugger pass the following to the run.tests.macro macro:
+            <additional.jvmargs>
+                <jvmarg value="-Xdebug"/>
+                <jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005"/>
+            </additional.jvmargs>
+	-->
+    <target name="testone">
+        <run.tests.macro>
+            <tests>
+                <fileset dir="tests/classes" includes="${ONECLASS}"/>
+            </tests>
+        </run.tests.macro>
+    </target>
+
     <target name="run.tests">
         <!-- we need to run the CrashRecovery test using a byteman script -->
         <run.tests.macro script="recovery.txt">
