--- a/XTS/sar/tests/pom.xml
+++ b/XTS/sar/tests/pom.xml
@@ -35,7 +35,7 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<archive>
 						<manifestEntries>
-					   		<Dependencies>org.jboss.xts,org.jboss.ws.cxf.jbossws-cxf-client services export</Dependencies>
+					   		<Dependencies>org.jboss.jts,org.jboss.ws.api,javax.xml.ws.api,org.jboss.xts,org.jboss.ws.jaxws-client services export,org.jboss.ws.cxf.jbossws-cxf-client services export</Dependencies>
 						</manifestEntries>
 					</archive>
 					<webXml>
