JBTM-1011 update to apply fix for XTSATRecoveryManagerImple
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@37823 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/XTS/sar/tests/build.xml
+++ b/XTS/sar/tests/build.xml
@@ -94,9 +94,8 @@
       <copy toDir="${build.classes.dir}/org/jboss/jbossts/xts/servicetests/generated/wsdl/" file="${wsdl.dir}/xtsservicetests.wsdl"/>
       <copy toDir="${build.classes.dir}/org/jboss/jbossts/xts/servicetests/service/" file="${dd.dir}/handlers.xml"/>
       <copy toDir="${build.classes.dir}/org/jboss/jbossts/xts/servicetests/service/subordinate" file="${dd.dir}/subordinatehandlers.xml"/>
-     <war warfile="${build.webapps.dir}/xtstest.war" webxml="${web.inf.dir}/web.xml">
+	 <war warfile="${build.webapps.dir}/xtstest.war" webxml="${web.inf.dir}/web.xml" manifest="${build.meta.inf.dir}/manifest.mf"> 
          <classes dir="${build.classes.dir}" includes="**/*"/>
-         <metainf dir="${build.meta.inf.dir}"/>
          <webinf dir="${dd.dir}" includes="wsdl/**"/>
      </war>
   </target>
