updated to not do an update before getting the version number

--- a/ArjunaCore/arjunacore/pom.xml
+++ b/ArjunaCore/arjunacore/pom.xml
@@ -36,7 +36,6 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>buildnumber-maven-plugin</artifactId>
-        <version>1.0-beta-4</version>
         <executions>
           <execution>
             <phase>validate</phase>
@@ -46,7 +45,7 @@
           </execution>
         </executions>
         <configuration>
-          <doCheck>true</doCheck>
+          <doCheck>false</doCheck>
           <doUpdate>false</doUpdate>
           <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
         </configuration>
