--- a/ArjunaJTA/integration/pom.xml
+++ b/ArjunaJTA/integration/pom.xml
@@ -48,7 +48,6 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>buildnumber-maven-plugin</artifactId>
-        <version>1.0-beta-4</version>
         <executions>
           <execution>
             <phase>validate</phase>
@@ -58,7 +57,7 @@
           </execution>
         </executions>
         <configuration>
-          <doCheck>true</doCheck>
+          <doCheck>false</doCheck>
           <doUpdate>false</doUpdate>
           <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
         </configuration>
