--- a/ArjunaCore/docs/pom.xml
+++ b/ArjunaCore/docs/pom.xml
@@ -23,8 +23,13 @@
   <name>ArjunaCore Documentation</name>
   <description>arjunacore docs</description>
   <packaging>pom</packaging>
-  <modules>
-    <module>development_guide</module>
-    <module>failure_recovery_guide</module>
-  </modules>
+  <profiles>
+    <profile>
+      <id>docs</id>
+      <modules>
+        <module>development_guide</module>
+        <module>failure_recovery_guide</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
