--- a/XTS/docs/pom.xml
+++ b/XTS/docs/pom.xml
@@ -23,7 +23,12 @@
   <packaging>pom</packaging>
   <name>xts docs</name>
   <description>xts docs</description>
-  <modules>
-    <module>administration_and_development_guide</module>
-  </modules>
+  <profiles>
+    <profile>
+      <id>docs</id>
+      <modules>
+        <module>administration_and_development_guide</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
