Updated STM to use the UidHelper class to pack/unpack as these are not operations in Narayana (or presumably 4.16.1), also update the STM pom.xml to integrated into the main build and added a new stm build profile

--- a/pom.xml
+++ b/pom.xml
@@ -898,5 +898,14 @@
         <module>ArjunaJTS</module>
       </modules>
     </profile>
+    <profile>
+      <id>stm</id>
+      <modules>
+        <module>common</module>
+        <module>ArjunaCore/arjuna</module>
+        <module>ArjunaCore/txoj</module>
+        <module>STM</module>
+      </modules>
+    </profile>
   </profiles>
 </project>
