--- a/STM/pom.xml
+++ b/STM/pom.xml
@@ -1,53 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>stm-arjuna</groupId>
+  <parent>
+    <groupId>org.jboss.narayana</groupId>
+    <artifactId>narayana-all</artifactId>
+    <version>5.0.0.M2-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
+  <groupId>org.jboss.narayana.stm</groupId>
   <artifactId>core</artifactId>
   <name>core</name>
-  <version>1.0-SNAPSHOT</version>
   <url>http://maven.apache.org</url>
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration> 
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>jboss</groupId>
-      <artifactId>jbossts-common</artifactId>
-      <version>4.5.0</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/jbossts-common.jar</systemPath>
+      <groupId>org.jboss.narayana</groupId>
+      <artifactId>common</artifactId>
     </dependency>
     <dependency>
-      <groupId>jboss</groupId>
-      <artifactId>jbosscore</artifactId>
-      <version>4.5.0</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/jbosscore.jar</systemPath>
+      <groupId>org.jboss.narayana.arjunacore</groupId>
+      <artifactId>arjuna</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.jboss.narayana.arjunacore</groupId>
+      <artifactId>txoj</artifactId>
+    </dependency>
+<!--    <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging-api</artifactId>
-      <version>1.0.4</version>
+      <version>1.0.4</version> 
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.14</version>
+    </dependency>-->
+    <dependency>
+      <groupId>org.jboss.logging</groupId>
+      <artifactId>jboss-logging</artifactId>
+      <scope>provided</scope>
     </dependency>
+    
   </dependencies>
 </project>
 
