JBTM-1019 make sure that the default is that the docs modules are built, added a note to README.md on how to disable

--- a/ArjunaCore/docs/pom.xml
+++ b/ArjunaCore/docs/pom.xml
@@ -26,6 +26,9 @@
   <profiles>
     <profile>
       <id>docs</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
       <modules>
         <module>development_guide</module>
         <module>failure_recovery_guide</module>
