JBTM-897 updated build script
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@37908 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/build.xml
+++ b/build.xml
@@ -95,7 +95,7 @@
         <ant dir="rhq-plugin" target="dist"/>
         <ant dir="txbridge" target="clean"/>
         <ant dir="txbridge" target="dist"/>
-        <ant dir="docs" target="install.docs">
+        <ant dir="docs" target="install.common.docs">
             <property name="dest.dir" value="../install/docs"/>
         </ant>
 
