Added a test to demonstrate what can happen when two XARR are configured with the same Xid
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@37917 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/ArjunaJTA/jta/build.xml
+++ b/ArjunaJTA/jta/build.xml
@@ -80,6 +80,9 @@
                     <exclude name="**/TestSynchronization.java"/>
                     <exclude name="**/TestXAResource.java"/>
                     <exclude name="**/SimpleNestedDisabledTest.java"/>
+                    <exclude name="**/XARROne.java"/>
+                    <exclude name="**/XARRTwo.java"/>
+                    <exclude name="**/XARRTestResource.java"/>
                 </fileset>
             </tests>
         </run.tests.macro>
