--- a/XTS/localjunit/WS-T/pom.xml
+++ b/XTS/localjunit/WS-T/pom.xml
@@ -75,7 +75,7 @@
 			 <dependency>
 				 <groupId>org.jboss.as</groupId>
 				 <artifactId>jboss-as-arquillian-container-managed</artifactId>
-				 <version>7.1.0.CR1-SNAPSHOT</version>
+				 <version>7.1.1.Final</version>
 				 <scope>test</scope>
 			 </dependency>
 		 </dependencies>
