--- a/XTS/sar/crash-recovery-tests/pom.xml
+++ b/XTS/sar/crash-recovery-tests/pom.xml
@@ -43,14 +43,14 @@
 		<dependency>
 			<groupId>org.jboss.jbossts</groupId>
 			<artifactId>jbossxts-api</artifactId>
-			<version>4.16.1-SNAPSHOT</version>
+			<version>4.16.1.Final</version>
 			<scope>system</scope>
 			<systemPath>${project.basedir}/../build/jbossxts-api.jar</systemPath>
 		</dependency>
                 <dependency>
                         <groupId>org.jboss.jbossts</groupId>
                         <artifactId>jbossjta</artifactId>
-                        <version>4.16.1-SNAPSHOT</version>
+                        <version>4.16.1.Final</version>
                         <scope>system</scope>
 			<systemPath>${project.basedir}/../../../ArjunaJTS/build/install/lib/jbossjts.jar</systemPath>
                 </dependency>
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>org.jboss.arquillian.junit</groupId>
 			<artifactId>arquillian-junit-container</artifactId>
-			<version>1.0.0.CR6</version>
+			<version>1.0.0.CR7</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
@@ -92,13 +92,13 @@
 				 <dependency>
 					 <groupId>org.jboss.as</groupId>
 					 <artifactId>jboss-as-arquillian-container-managed</artifactId>
-					 <version>7.1.0.CR1-SNAPSHOT</version>
+					 <version>7.1.0.Final</version>
 					 <scope>test</scope>
 				 </dependency>
 				  <dependency>
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-controller-client</artifactId>
-                    <version>7.1.0.CR1-SNAPSHOT</version>
+                    <version>7.1.0.Final</version>
                     <scope>test</scope>
                 </dependency>
 			 </dependencies>
