--- a/XTS/localjunit/WSTX11-interop/pom.xml
+++ b/XTS/localjunit/WSTX11-interop/pom.xml
@@ -5,28 +5,20 @@
 	PURPOSE. See the GNU Lesser General Public License for more details. You should have received a copy of the GNU Lesser General Public License, v.2.1 along with this distribution; if not, write to the Free 
 	Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <groupId>org.jboss.narayana.xts</groupId>
+	<parent>
+		<groupId>org.jboss.narayana.xts</groupId>
+		<artifactId>localjunit</artifactId>
+		<version>5.0.0.M2-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>interop11</artifactId>
 	<packaging>war</packaging>
 	<name>interop11</name>
 	<description>JBoss Transactions WS-Addressing interop test</description>
-	<version>5.0.0.M2-SNAPSHOT</version>
-    <properties>
-        <arquillian.version>1.0.0.CR7</arquillian.version>
-        <jboss.version>7.1.1.Final</jboss.version>
-    </properties>
 	<build>
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.1</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
@@ -43,88 +35,14 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>org.jboss.narayana.xts</groupId>
-			<artifactId>jbossxts</artifactId>
-            <version>5.0.0.M2-SNAPSHOT</version>
-			<scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.jboss.logging</groupId>
-                    <artifactId>jboss-logging-spi</artifactId>
-                </exclusion>
-            </exclusions>
-		</dependency>
-		<!--
-		<dependency>
-			<groupId>org.jboss.logging</groupId>
-			<artifactId>jboss-logging</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.logging</groupId>
-			<artifactId>jboss-logging-processor</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		-->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-            <version>4.8.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
-            <version>1.6.1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>javax.inject</groupId>
-			<artifactId>javax.inject</artifactId>
-			<version>1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.arquillian.junit</groupId>
-			<artifactId>arquillian-junit-container</artifactId>
-            <version>${arquillian.version}</version>
+			<groupId>org.jboss.arquillian.protocol</groupId>
+			<artifactId>arquillian-protocol-servlet</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<profiles>
-		<profile>
-			<!-- The default profile skips all tests, though you can tune it 
-			to run just unit tests based on a custom pattern -->
-			<!-- Seperate profiles are provided for running all tests, including 
-			Arquillian tests that execute in the specified container -->
-		 <id>arq</id>
-		 <activation>
-			 <activeByDefault>false</activeByDefault>
-		 </activation>
-		 <build>
-			 <plugins>
-				 <plugin>
-					 <artifactId>maven-surefire-plugin</artifactId>
-                	 <version>2.7.2</version>
-					 <configuration>
-						 <skip>false</skip>
-					 </configuration>
-				 </plugin>
-			 </plugins>
-		 </build>
-		 <dependencies>
-			 <dependency>
-				 <groupId>org.jboss.arquillian.protocol</groupId>
-				 <artifactId>arquillian-protocol-servlet</artifactId>
-				 <version>${arquillian.version}</version>
-			 </dependency>
-			 <dependency>
-				 <groupId>org.jboss.as</groupId>
-				 <artifactId>jboss-as-arquillian-container-managed</artifactId>
-				 <version>${jboss.version}</version>
-				 <scope>test</scope>
-			 </dependency>
-		 </dependencies>
-	 </profile>
- </profiles>
 </project>
