--- a/txbridge/tests/pom.xml
+++ b/txbridge/tests/pom.xml
@@ -10,7 +10,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <version.jbossas>7.1.0.Final-SNAPSHOT</version.jbossas>
+        <version.jbossas>7.1.1.Final</version.jbossas>
         <version.jbossts>4.16.localbuild-SNAPSHOT</version.jbossts>
         <version.arquillian.junit>1.0.0.CR7</version.arquillian.junit>
         <version.junit>4.8.2</version.junit>
