Updated to 4.16.4-SNAPSHOT
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@37959 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/build.xml
+++ b/build.xml
@@ -211,7 +211,7 @@
                 <filterset>
                     <filter token="groupid" value="${groupid}"/>
                     <filter token="artifact" value="@{artifact}"/>
-                    <filter token="version" value="4.16.3.Final"/>
+                    <filter token="version" value="4.16.4.Final-SNAPSHOT"/>
                     <filter token="packaging" value="@{packaging}"/>
                 </filterset>
             </copy>
