JBTM-1079 "ModuleNotFoundException: org.junit:main" when deploying XTS unit and interop tests to JBossAS-7.1.1

--- a/XTS/WSAS/tests/pom.xml
+++ b/XTS/WSAS/tests/pom.xml
@@ -35,7 +35,7 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<archive>
 						<manifestEntries>
-							<Dependencies>org.jboss.jts,org.jboss.ws.api,javax.xml.ws.api,org.jboss.xts,org.dom4j,org.junit,org.jboss.ws.jaxws-client services export,org.jboss.ws.cxf.jbossws-cxf-client services export</Dependencies>
+							<Dependencies>org.jboss.jts,org.jboss.ws.api,javax.xml.ws.api,org.jboss.xts,org.dom4j,org.jboss.ws.jaxws-client services export,org.jboss.ws.cxf.jbossws-cxf-client services export</Dependencies>
 						</manifestEntries>
 					</archive>
 					<webXml>
