--- a/XTS/sar/crash-recovery-tests/pom.xml
+++ b/XTS/sar/crash-recovery-tests/pom.xml
@@ -6,71 +6,26 @@
 	Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <groupId>org.jboss.narayana.xts</groupId>
-    <modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.jboss.narayana.xts</groupId>
+		<artifactId>localjunit</artifactId>
+		<version>5.0.0.M2-SNAPSHOT</version>
+		<relativePath>../../localjunit/pom.xml</relativePath>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
     <artifactId>localjunit-crash-recovery-tests</artifactId>
     <packaging>jar</packaging>
     <name>xts crash recovery tests</name>
-    <description>xts crash recovery tests</description>
-    <version>5.0.0.M2-SNAPSHOT</version>
-    <!--
-     <repositories>
-         <repository>
-             <id>jboss-public-repository</id>
-             <name>JBoss Repository</name>
-             <url>https://repository.jboss.org/nexus/content/groups/public</url>
-             <releases>
-                 <enabled>true</enabled>
-             </releases>
-             <snapshots>
-                 <enabled>true</enabled>
-             </snapshots>
-         </repository>
-     </repositories>
-     -->
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.1</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <dependencies>
-        <dependency>
-            <groupId>org.jboss.narayana.xts</groupId>
-            <artifactId>xtstest</artifactId>
-            <version>5.0.0.M2-SNAPSHOT</version>
-            <type>war</type>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.arquillian.junit</groupId>
-            <artifactId>arquillian-junit-container</artifactId>
-            <version>1.0.0.CR7</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.as</groupId>
-            <artifactId>jboss-as-arquillian-container-managed</artifactId>
-            <version>7.1.1.Final</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.as</groupId>
-            <artifactId>jboss-as-controller-client</artifactId>
-            <version>7.1.1.Final</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+	<description>xts crash recovery tests</description>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<forkMode>once</forkMode>
+              		<workingDirectory>.</workingDirectory>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
