--- a/pom.xml
+++ b/pom.xml
@@ -392,7 +392,7 @@
         <!-- https://repository.jboss.org/nexus/content/groups/public-jboss/org/jboss/as/jboss-as-parent/7.0.0.Final/jboss-as-parent-7.0.0.Final.pom -->
         <groupId>org.jboss.as</groupId>
         <artifactId>jboss-as-parent</artifactId>
-        <version>7.1.1.Final</version>
+		<version>${jboss-as.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -699,6 +699,7 @@
     <emma.jar.location>${project.basedir}/ext/emma.jar</emma.jar.location>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <findbugs.skip>true</findbugs.skip>
+    <jboss-as.version>7.1.1.Final</jboss-as.version>
   </properties>
   <profiles>
     <profile>
